# High-Performance-Computing-Lab

project00/project0/fraction_summing/: fraction_toolbox.cpp  fraction_toolbox.hpp  main  main.cpp
project01/final/1-Rosa-warm-up/: hello_world.cpp  slurm_job_one.sh  slurm_job_two.sh
project01/final/3-Optimize-Matrix-Matrix-Mult/: .Makefile.swp  Makefile  benchmark.c  dgemm-blocked.c  timing_basic_dgemm.data  timing_blas_dgemm.data  timing_blocked_dgemm.data
project01/report/: main.tex
project01/report/bib/: sources.bib
project01/report/sections/: ex01.tex  ex02.tex  ex03.tex
project02/code/: plots_project02.ipynb
project02/code/bugs/: omp_bug1  omp_bug1.c  (+8 more)
project02/report/: main.tex
project03/code/mini_app/: Makefile  linalg.cpp  main.cpp  operators.cpp  pde.csv  post_process.sh  pyproject.toml  run  scaling_plots.py
project03/report/: .latexmkrc  main.tex
project04/code/powermethod/: .run.swp  Makefile  post_process.sh  powermethod.csv  powermethod.py  powermethod_all_nodes.csv  powermethod_rows.c  pyproject.toml  run  run_all_nodes  scaling_plots.py
project04/report/: main.tex
project05/code/hpc_python/: pyproject.toml
project05/code/hpc_python/ManagerWorker/: manager_worker.py  output.csv  post_process.sh  run  scaling_plots.py
project05/code/hpc_python/ghost/: ghost.py
project05/code/hpc_python/sum_of_ranks/: sum_of_ranks.py  sum_of_ranks_c_style.py  sum_of_ranks_pickle.py
project05/code/mini_app/: Makefile  data.cpp  data.h  linalg.cpp  main  main.cpp  operators.cpp  output_strong.csv  output_weak.csv  pde.csv  plot.py  post_process.sh  pyproject.toml  run  scaling_plots.py
project05/report/: Makefile  main.tex
project06/report/: main.tex
template/: sbatch.sh
(+108 files in other folders)
