[tool.poetry]
name = "powermethod"
version = "0.1.0"
description = ""
authors = ["Dennys Huber <dennys.huber@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.3"

[tool.poetry.group.dev.dependencies]
numpy = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
