[tool.poetry]
name = "hpc-python"
version = "0.1.0"
description = ""
authors = ["Dennys Huber <dennys.huber@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
numpy = "^2.1.3"
mpi4py = "^4.0.1"
matplotlib = "^3.9.2"
black = "^24.10.0"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
