[tool.poetry]
name = "mini-app"
version = "0.1.0"
description = ""
authors = ["Dennys Huber <dennys.huber@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
matplotlib = "^3.9.2"
numpy = "^2.1.3"
pandas = "^2.2.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
